# AgentMind

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  STAGE4_COMPLETION.md  STAGE4_TEST_RESULTS.md  docker-compose.yml  example.env  pytest.ini  requirements.txt
backend/: .dockerignore  .gitkeep  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/dependencies/: database.py  graph.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  agent.py
backend/app/services/: agent.py
backend/src/: __init__.py  dependencies.py  engine.py  main.py
backend/src/api/: __init__.py  chat.py  consolidation.py  observations.py  retrieval.py
backend/src/memory/: __init__.py  consolidation.py  embeddings.py  extraction_models.py  manager.py  retrieval.py  schema.py  stm.py
backend/tests/: __init__.py  conftest.py  test_bitemporal_ltm.py  test_chat_api.py  test_consolidation_graph.py  test_consolidation_integration.py  test_deduplication.py  test_engine.py  test_extraction_models.py  test_health.py  test_main_api.py  test_memory_manager.py  test_retrieval_api.py  test_retrieval_graph.py  test_retrieval_integration.py  test_schema.py  test_stm_buffer.py  test_vector_search.py
docs/: AgentMind_Plan.md  Reflexive_Memory_Architecture.md
frontend/: .dockerignore  .eslintrc.cjs  .gitkeep  Dockerfile  README.md  index.html  next.config.js  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  main.tsx
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/: AnalysisView.tsx  ChatInterface.tsx  GraphVisualizer.tsx  Icons.tsx  InputBar.tsx  InteractionPanel.module.css  InteractionPanel.tsx  Message.tsx  (+1 more)
src/: __init__.py  basic_operations.py  bitemporal_test.py  openai_extraction_test.py  speed_test.py  test_connection.py
(+9 files in other folders)
